compiler/testData/diagnostics/tests/cast/AsErasedWarning.jet

import java.util.List;

fun ff(a: Any) = <!UNCHECKED_CAST!>a as List<String><!>
